--- a/_posts/2018-03-18-bookmark.md
+++ b/_posts/2018-03-18-bookmark.md
@@ -10,6 +10,8 @@ categories: memo
     <http://blog.eairship.kr/category/프로그래밍 관련/Python>{:target="_blank"}
   * Medium  
     <https://medium.com/topic/programming>{:target="_blank"}
+  * liquid docs  
+    <https://shopify.github.io/liquid/basics/introduction/>{:target="_blank"}
 * temp
   * kakao 기술 블로그가 GitHub Pages로 간 까닭은  
     <http://tech.kakao.com/2016/07/07/tech-blog-story/>{:target="_blank"}
