--- a/_posts/2018-03-18-bookmark.md
+++ b/_posts/2018-03-18-bookmark.md
@@ -13,6 +13,6 @@ categories: memo
   * liquid docs  
     <https://shopify.github.io/liquid/basics/introduction/>{:target="_blank"}
 * temp
-  * kakao 기술 블로그가 GitHub Pages로 간 까닭은  
+  * jekyll 태그기능 적용방법 참고 
     <http://tech.kakao.com/2016/07/07/tech-blog-story/>{:target="_blank"}
 * checked
