--- a/_posts/2018-03-18-bookmark.md
+++ b/_posts/2018-03-18-bookmark.md
@@ -6,13 +6,10 @@ categories: memo
 ---
 
 * Frequently
-  * pyhon 프로그래밍 강좌  
-    <http://blog.eairship.kr/category/프로그래밍 관련/Python>{:target="_blank"}
-  * Medium  
-    <https://medium.com/topic/programming>{:target="_blank"}
-  * liquid docs  
-    <https://shopify.github.io/liquid/basics/introduction/>{:target="_blank"}
+  * pyhon 프로그래밍 강좌, <http://blog.eairship.kr/category/프로그래밍 관련/Python>{:target="_blank"}
+  * Medium, <https://medium.com/topic/programming>{:target="_blank"}
+  * liquid docs, <https://shopify.github.io/liquid/basics/introduction/>{:target="_blank"}
+  * es6 vs es5, <http://es6-features.org>{:target="_blank"}
 * temp
-  * jekyll 태그기능 적용방법 참고 
-    <http://tech.kakao.com/2016/07/07/tech-blog-story/>{:target="_blank"}
+  * jekyll 태그기능 적용방법 참고, <http://tech.kakao.com/2016/07/07/tech-blog-story/>{:target="_blank"}
 * checked
