--- a/_posts/2018-03-18-bookmark.md
+++ b/_posts/2018-03-18-bookmark.md
@@ -6,10 +6,13 @@ categories: memo
 ---
 
 * Frequently
-  * pyhon 프로그래밍 강좌, <http://blog.eairship.kr/category/프로그래밍 관련/Python>{:target="_blank"}
-  * Medium, <https://medium.com/topic/programming>{:target="_blank"}
-  * liquid docs, <https://shopify.github.io/liquid/basics/introduction/>{:target="_blank"}
-  * es6 vs es5, <http://es6-features.org>{:target="_blank"}
+  * [pyhon 프로그래밍 강좌](http://blog.eairship.kr/category/프로그래밍 관련/Python){:target="_blank"}
+  * [Medium](https://medium.com/topic/programming){:target="_blank"}
+  * [liquid docs](https://shopify.github.io/liquid/basics/introduction){:target="_blank"}
+  * [es6 vs es5](http://es6-features.org){:target="_blank"}
+  * [es5 core](http://tech.inswave.com/2018/03/17/ES5){:target="_blank"}
 * temp
-  * jekyll 태그기능 적용방법 참고, <http://tech.kakao.com/2016/07/07/tech-blog-story/>{:target="_blank"}
+  * [jekyll 태그기능 적용방법](http://tech.kakao.com/2016/07/07/tech-blog-story){:target="_blank"}
+  * [js module](https://auth0.com/blog/javascript-module-systems-showdown){:target="_blank"}
+  * [4 Types of Memory Leaks in JavaScript](https://auth0.com/blog/four-types-of-leaks-in-your-javascript-code-and-how-to-get-rid-of-them/){:target="_blank"}
 * checked
