--- a/_posts/2018-03-18-bookmark.md
+++ b/_posts/2018-03-18-bookmark.md
@@ -13,6 +13,7 @@ categories: memo
   * [es5 core](http://tech.inswave.com/2018/03/17/ES5){:target="_blank"}
 * temp
   * [jekyll 태그기능 적용방법](http://tech.kakao.com/2016/07/07/tech-blog-story){:target="_blank"}
+  * [Git-브랜치-브랜치-워크플로](https://git-scm.com/book/ko/v2/Git-브랜치-브랜치-워크플로){:target="_blank"}
   * [js module](https://auth0.com/blog/javascript-module-systems-showdown){:target="_blank"}
   * [4 Types of Memory Leaks in JavaScript](https://auth0.com/blog/four-types-of-leaks-in-your-javascript-code-and-how-to-get-rid-of-them/){:target="_blank"}
 * checked
