--- a/_posts/2018-03-18-bookmark.md
+++ b/_posts/2018-03-18-bookmark.md
@@ -12,6 +12,8 @@ categories: memo
   * [es6 vs es5](http://es6-features.org){:target="_blank"}
   * [es5 core](http://tech.inswave.com/2018/03/17/ES5){:target="_blank"}
   * [es6-in-depth-modules](http://hacks.mozilla.or.kr/2016/05/es6-in-depth-modules/){:target="_blank"}
+  * [partial.js](https://marpple.github.io/partial.js/){:target="_blank"}
+
 * temp
   * [jekyll 태그기능 적용방법](http://tech.kakao.com/2016/07/07/tech-blog-story){:target="_blank"}
   * [intro-to-immutable-js](https://auth0.com/blog/intro-to-immutable-js){:target="_blank"}
