--- a/_posts/2018-03-22-amd-order.md
+++ b/_posts/2018-03-22-amd-order.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "requirejs 모듈 로드시 순서 관련"
+title:  "AMD 모듈 로드시 순서 관련"
 date:   2018-03-22 00:46:36 +0900
 categories: memo
 ---
