--- a/_posts/2018-04-24-gcd-lcm.md
+++ b/_posts/2018-04-24-gcd-lcm.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "최대공약수 최소공배수 알고리즘"
 date:   2018-04-24 13:00:00 +0900
-categories: FrontEnd
+categories: Algorithm
 ---
 
 #### 유클리드 호제법
