--- a/_posts/2018-04-24-gcd-lcm.md
+++ b/_posts/2018-04-24-gcd-lcm.md
@@ -12,9 +12,9 @@ categories: Algorithm
 
 
 이를 js코드로 작성하면 아래와 같다
-```
+```js
 function gcd(a,b) {
-    return a%b ? gcd(b, a%b) : b;
+  return a%b ? gcd(b, a%b) : b;
 }
 ```
 
@@ -27,6 +27,29 @@ function gcd(a,b) {
 `a * b = L * G`
 
 그러므로, `L = ( a * b ) / G` 가 된다.
+```js
+function lcm(a,b){
+  return a*b/gcd(a,b);
+}
+```
+
+<br>
+<br>
+
+
+#### n개 수의 최소공배수는?
+n개의 자연수 배열을 입력으로 받아서 n개 수의 최소공배수를 리턴하는 함수
+```js
+function nlcm(num) {
+  function gcd(a,b) {
+    return a%b ? gcd(b, a%b) : b;
+  }
+  function lcm(a,b){
+    return a*b/gcd(a,b);
+  }
+  return num.reduce(lcm);
+}
+```
 
 <br>
 <br>
@@ -35,3 +58,4 @@ function gcd(a,b) {
 ### Ref.
 * <https://opentutorials.org/course/1685/9533>{:target="_blank"}
 * <https://ko.wikipedia.org/wiki/유클리드_호제법>{:target="_blank"}
+* <https://programmers.co.kr/learn/challenge_codes/30>{:target="_blank"}
