--- a/_posts/2018-04-24-gcd-lcm.md
+++ b/_posts/2018-04-24-gcd-lcm.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "최대공약수 최소공배수 알고리즘"
+title:  "[알고리즘] 최대공약수 최소공배수"
 date:   2018-04-24 13:00:00 +0900
 categories: Algorithm
 ---
