--- a/_posts/2018-05-08-js-getday.md
+++ b/_posts/2018-05-08-js-getday.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[js] 특정날짜 요일 구하기"
+title:  "[알고리즘] 특정날짜 요일 구하기"
 date:   2018-05-08 23:00:00 +0900
 categories: algorithm
 ---
