--- a/_posts/2018-05-31-ec2-node.md
+++ b/_posts/2018-05-31-ec2-node.md
@@ -11,23 +11,24 @@ categories: aws
 $ sudo yum update
 ```
 
-2. Node.js 설치  
-Node 컴파일에 필요한 패키지를 먼저 설치하고 Github 저장소에서 Node를 내려받는다.
+1. 설치에 필요한 패키지들 먼저 설치
+```bash
+$ sudo yum install gcc-c++ make
+$ sudo yum install openssl-devel
+$ sudo yum install git
 ```
-sudo yum install gcc-c++ make
-sudo yum install openssl-devel
-sudo yum install git
-git clone git://github.com/joyent/node.git
-cd node
+1. Github 저장소에서 Node를 내려받고 어떤 버전의 노드를 설치할 것인지 선택한다. `git tag -l` 명령을 사용하면 전체 노드 버전을 확인할 수 있다. 
+```bash
+$ git clone git://github.com/joyent/node.git
+$ cd node
+$ git checkout v0.12.7
 ```
-
-	이제 어떤 버전의 노드를 설치할 것인지 선택해야 한다. `git tag -l` 명령을 사용하면 전체 노드 버전을 확인할 수 있다. make 명령이 완료되기까지는 약 30분 정도 소요된다. 
-	```
-	git checkout v0.12.7
-	./configure
-	make
-	sudo make install
-	```
+1. make 명령으로 컴파일하고 설치한다
+```bash
+$ ./configure
+$ make
+$ sudo make install
+```
 
 
 <br>
