--- a/_posts/2018-05-31-ec2-node.md
+++ b/_posts/2018-05-31-ec2-node.md
@@ -17,19 +17,20 @@ $ sudo yum install gcc-c++ make
 $ sudo yum install openssl-devel
 $ sudo yum install git
 ```
-1. Github 저장소에서 Node를 내려받고 어떤 버전의 노드를 설치할 것인지 선택한다. `git tag -l` 명령을 사용하면 전체 노드 버전을 확인할 수 있다. (근데 여기는 너무 오래된 버젼만 들어있음. 아래 방법을 이용하여 최신버젼을 가져올 수 있음)
+1. Github 저장소에서 Node를 내려받고 어떤 버전의 노드를 설치할 것인지 선택한다. `git tag -l` 명령을 사용하면 전체 노드 버전을 확인할 수 있다.
 ```bash
 $ git clone git://github.com/joyent/node.git
 $ cd node
 $ git checkout v0.12.7
 ```
-_<https://nodejs.org/dist/>_ 에서 적절한 node 버젼을 wget을 이용하여 소스파일을 가져올 수도 있음
+근데 위 git저장소에는 너무 오래된 버젼만 들어있음. 위 제시된 0.12.7 버젼에서는 es6 사용불가.
+_<https://nodejs.org/dist/>_ 에서 최신 nodejs 버젼을 wget을 이용하여 소스파일을 가져올 수도 있음
 ```bash
 $ wget https://nodejs.org/download/release/v9.2.1/node-v9.2.1.tar.gz
 $ tar -xvf node-v9.2.1.tar.gz
 $ cd node-v9.2.1
 ```
-1. make 명령으로 컴파일하고 설치한다
+1. make 명령으로 컴파일하고 설치한다(make 명령은 30분정도 시간이 소요될 수 있다)
 ```bash
 $ ./configure
 $ make
