--- a/_posts/2018-05-31-ec2-node.md
+++ b/_posts/2018-05-31-ec2-node.md
@@ -24,7 +24,7 @@ $ cd node
 $ git checkout v0.12.7
 ```
 근데 위 git저장소에는 너무 오래된 버젼만 들어있음. 위 제시된 0.12.7 버젼에서는 es6 사용불가.
-_<https://nodejs.org/dist/>_ 에서 최신 nodejs 버젼을 wget을 이용하여 소스파일을 가져올 수도 있음
+_<https://nodejs.org/dist/>_ 에서 시스템환경에 맞는 최신 nodejs 버젼을 가져올 수도 있음
 ```bash
 $ wget https://nodejs.org/download/release/v9.2.1/node-v9.2.1.tar.gz
 $ tar -xvf node-v9.2.1.tar.gz
