--- a/_posts/2018-05-17-mac-lsof.md
+++ b/_posts/2018-05-17-mac-lsof.md
@@ -7,12 +7,12 @@ categories: network
 아래와 같이 lsof 명령으로 확인
 
 ```console
-MacBook9:~ songmingu$ sudo lsof -i :7005
+$ sudo lsof -i :7005
 COMMAND   PID      USER   FD   TYPE             DEVICE SIZE/OFF NODE NAME
-java    72631 songmingu   57u  IPv6 0x5973dd9e9c2d668d      0t0  TCP localhost:afs3-volser (LISTEN)
-MacBook9:~ songmingu$ kill -9 72631
-MacBook9:~ songmingu$ sudo lsof -i :7005
-MacBook9:~ songmingu$ 
+java    72631    user01   57u  IPv6 0x5973dd9e9c2d668d      0t0  TCP localhost:afs3-volser (LISTEN)
+$ kill -9 72631
+$ sudo lsof -i :7005
+$ 
 ```
 
 <br>
