카테고리 정리

--- a/_posts/2018-04-20-postman.md
+++ b/_posts/2018-04-20-postman.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "postman 을 이용한 request 캡쳐"
 date:   2018-04-20 23:00:00 +0900
-categories: Python
+categories: FrontEnd
 ---
 #### 모바일에서 HTTP request 캡쳐
 - [capturing_http_requests](https://www.getpostman.com/docs/v6/postman/sending_api_requests/capturing_http_requests)
