--- a/_drafts/2018-04-26-js-regexp.md
+++ b/_drafts/2018-04-26-js-regexp.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "[js] 정규표현식 간단히 이해하기"
 date:   2018-04-26 09:00:00 +0900
-categories: FrontEnd
+categories: vanillaJS
 ---
 Intro
 ---
