--- a/_posts/2018-03-22-amd-order.md
+++ b/_posts/2018-03-22-amd-order.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "AMD 모듈 로드시 순서 관련"
 date:   2018-03-22 00:46:36 +0900
-categories: memo
+categories: FrontEnd
 ---
 #### 예시
 <script src="https://gist.github.com/min9nim/33a76b8c679e24dade2afc3ec134b4e4.js"></script>
