--- a/_posts/2018-04-24-gcd-lcm.md
+++ b/_posts/2018-04-24-gcd-lcm.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "[알고리즘] 최대공약수 최소공배수"
 date:   2018-04-24 13:00:00 +0900
-categories: Algorithm
+categories: algorithm
 ---
 
 #### 유클리드 호제법
