--- a/_posts/2018-08-10-linux-ssh.md
+++ b/_posts/2018-08-10-linux-ssh.md
@@ -3,6 +3,7 @@ layout: post
 title:  "[linux] 권한파일을 이용한 ssh 접근 조건"
 date:   2018-08-10 01:00:00 +0900
 categories: linux
+tags: [linux, ssh]
 ---
 ### Intro
 대표적으로 aws 에서는 ssh를 통해 EC2인스턴스에 접근할 때, 비밀번호 방식이 아닌 권한파일(.pem)을 이용한다. 일반적으로 권한파일을 이용한 ssh 접근시 필요한 조건은 아래와 같다
