--- a/_posts/2018-08-09-lever-tip.md
+++ b/_posts/2018-08-09-lever-tip.md
@@ -3,6 +3,7 @@ layout: post
 title:  "[linux] 활용 팁"
 date:   2018-08-09 01:00:00 +0900
 categories: linux
+tags: [linux, tip]
 ---
 ### 2개 명령을 한 번에 실행
 `;` 을 이용하면 두개 명령을 한번에 실행할 수 있다
