태그 기능 마무리

--- a/_posts/2018-08-09-fontello.md
+++ b/_posts/2018-08-09-fontello.md
@@ -3,6 +3,7 @@ layout: post
 title:  "[fontello] 무료 아이콘 사용"
 date:   2018-08-09 01:00:00 +0900
 categories: FrontEnd
+tags: [fontello, icon]
 ---
 ### intro
 화면 디자인시 아이콘 사용은 거의 필수적인데 적절한 아이콘을 찾지 못해 허덕이던 중 fontello.com 이란 곳을 발견하고 사막에서 오아시스를 만난 것 같이 기뻣다.
