--- a/_posts/2018-08-10-linux-ssh.md
+++ b/_posts/2018-08-10-linux-ssh.md
@@ -13,7 +13,7 @@ tags: [linux, ssh]
 키페어를 생성하는 방법은 생략하고 공개키와 비밀키의 위치에 대한 내용만 소개한다
 
 #### 서버  
-`~/.ssh/` 경로에 공개키가 위치해 있어야 한다
+`~/.ssh/` 경로에 공개키가 위치해 있어야 한다. 공개키 파일명은 반드시 `authorized_keys`를 사용해야 한다
 ```bash
 $ pwd;ls -al
 /home/ubuntu/.ssh
