--- a/_posts/2018-05-31-ec2-node.md
+++ b/_posts/2018-05-31-ec2-node.md
@@ -3,6 +3,7 @@ layout: post
 title:  "[AWS-EC2] 리눅스에 nodejs 설치"
 date:   2018-05-31 10:00:00 +0900
 categories: nodejs
+tags: [aws, ec2, nodejs, linux]
 ---
 
 1. EC2 업데이트  
