--- a/_posts/2018-05-17-mac-lsof.md
+++ b/_posts/2018-05-17-mac-lsof.md
@@ -3,6 +3,7 @@ layout: post
 title:  "[mac] 열린 포트 확인"
 date:   2018-05-17 10:00:00 +0900
 categories: network
+tags: [mac, lsof]
 ---
 아래와 같이 lsof 명령으로 확인
 
