--- a/_posts/2018-08-10-apt-get.md
+++ b/_posts/2018-08-10-apt-get.md
@@ -3,6 +3,7 @@ layout: post
 title:  "[linux] apt-get 사용법"
 date:   2018-08-10 01:00:00 +0900
 categories: linux
+tags: [apt-get]
 ---
 ### Intro
 리눅스에서 대표적인 패키지 관리 프로그램인 apt-get 명령 사용법
