--- a/_posts/2018-08-10-linux-ssh.md
+++ b/_posts/2018-08-10-linux-ssh.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[linux] 권한파일을 이용한 ssh 접근 조건"
+title:  "[linux] 권한파일을 이용한 ssh 접근 필요사항"
 date:   2018-08-10 01:00:00 +0900
 categories: linux
 tags: [linux, ssh]
