--- a/_posts/2018-09-03-js-string.md
+++ b/_posts/2018-09-03-js-string.md
@@ -5,20 +5,21 @@ date: 2018-09-03 09:00
 categories: vanillaJS
 tags: [string, slice, substr, substring]
 ---
-자바스크립트에서 문자열의 일부를 추출하고자 할 때 사용할 수 있는 함수는 slice, substr, substring 3가지가 있다. 자바스크립트에 익숙한 개발자라도 3가지 함수의 차이점을 정확하게 이해하고 있는 사람은 많지 않을 것 같다. 이번 포스트에서는 3가지 함수의 용법을 정확히 이해하고 어느 경우에 어떤 함수를 사용하는 것이 좋을 지 생각해 본다
+자바스크립트에서 문자열의 일부를 추출하고자 할 때 사용할 수 있는 함수는 slice, substr, substring 3가지가 있다. 자바스크립트에 익숙한 개발자라도 3가지 함수의 차이점을 정확하게 이해하고 있는 사람은 많지 않을 것 같다. 이 글에서는 3가지 함수의 용법을 정확히 이해하고 어느 경우에 어떤 함수를 사용하는 것이 좋을 지 안내한다
 
-### slice 와 substring
-우선 2가지 함수가 비슷하다. 가져올 문자열의 시작위치와 끝위치를 인자로 받는다. **끝 위치의 인덱스는 추출될 문자열에 포함되지 않는다**는 것을 꼭 기억하자
+<br>
+### slice 와 substring 의 용법
+위 2가지 함수는 용법이 동일하다. 가져올 문자열의 시작위치와 끝위치를 인자로 받는다.
 
-2개의 인자모두 양수일 경우
+2개의 인자 모두 양수일 경우
 ```javascript
 var str = "0123456789";
-str.slice(2,5); // "234"
+str.slice(2,5); // "234"      // 두번째 인자의 끝 위치는 추출될 문자열에 포함되지 않는다
 str.substring(2,5); // "234"
 ```
 
 <br>
-2번째 인자가 생략될 경우 시작위치부터 마지막까지 가져온다
+2번째 인자가 생략될 경우 시작 위치부터 마지막까지 가져온다
 ```javascript
 var str = "0123456789";
 str.slice(2); // "23456789"
@@ -27,16 +28,23 @@ str.substring(2); // "23456789"
 여기까지는 두 함수의 결과가 동일하다. 하지만 아래부터는 결과가 다르다.
 
 <br>
-첫번째 인자로 음수를 사용할 경우 `slice` 는 뒤에서부터 시작 인덱스를 계산하여 마지막까지 문자열을 추출한다.
+### slice 만의 용법
+첫번째 인자로 음수를 사용할 경우 `slice` 는 뒤에서부터 시작 인덱스를 거꾸로 계산하여 마지막까지 문자열을 추출한다.
 ```javascript
 var str = "0123456789";
-str.slice(-3);  // "789"
-str.substring(-3);  // "0123456789"
-str.slice(-5, -2);  // "567"
+str.slice(-5, -2);  // "567"    // -5 위치부터 -3 위치까지 문자열 추출
+str.substring(-5, -2);  // ""   // substring 은 음수를 제대로 처리하지 못한다.
+```
+
+음수 인자 하나만 주어질 경우에는 뒤부터 해당되는 시작위치부터 마지막까지 문자열을 추출한다.
+```javascript
+var str = "0123456789";
+str.slice(-3);  // "789"    // -3 위치부터 마지막까지 문자열 추출
+str.substring(-3);  // "0123456789"  // substring 은 역시 음수를 제대로 처리하지 못한다.
 ```
 
 <br>
-slice 는 배열에서도 동일하게 사용할 수 있다.
+또한 slice 는 배열에서도 동일하게 사용할 수 있다.(물론 String.prototype.slice 와 Array.prototype.slice 는 서로 다른 함수지만 용법이 동일하다는)
 ```
 var arr = ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9"];
 arr.slice(3,6);     // ["3", "4", "5"]
@@ -45,8 +53,8 @@ arr.slice(-4, -1);  //["6", "7", "8"]
 ```
 
 <br>
-### substr
-substr 은 추출할 문자열의 시작위치와 개수를 인자로 받아서 문자열을 추출한다
+### substr 의 용법
+substr 은 추출할 문자열의 시작위치와 길이를 인자로 받아서 문자열을 추출한다
 ```javascript
 var str = "0123456789";
 str.substr(3,4);    // "3456"
@@ -59,12 +67,19 @@ var str = "0123456789";
 str.substr(5);    // "56789"
 ```
 
-음수도 사용이 가능하다.
 <br>
+시작위치로 음수도 사용이 가능하다.
 ```javascript
 var str = "0123456789";
-str.substr(-3);     // "789"
-str.substr(-5, 3);  // "567"
+str.substr(-3);     // "789"   // -3 위치부터 마지막까지 추출
+str.substr(-5, 3);  // "567"   // -5 위치부터 3글자 추출
+```
+
+<br>
+두번째 인자로 음수를 전달하면 당연히 이상한? 결과가 출력된다(괜히 적절하지 않은 인자 전달은 삼가하자)
+```javascript
+var str = "0123456789";
+str.substr(-5, -2);  // ""
 ```
 
 
