--- a/_posts/2018-10-25-zeit-now.md
+++ b/_posts/2018-10-25-zeit-now.md
@@ -50,23 +50,40 @@ $ my-api/ now
 도커는 내가 아직 잘 모르는 분야라 건드려 보지 않았다
 
 <br>
+#### 배포된 앱목록 확인
+```
+$ now ls
+> 14 total deployments found under min9nim@gmail.com [933ms]
+> To list more deployments for an app run `now ls [app]`
+
+  app                  url                                    inst #    type      state    age
+  sharelink            sharelink-ypobxbsycs.now.sh                 1    NPM       READY    6h
+  sharelink-backend    sharelink-backend-nwdiycdvbe.now.sh         0    NPM       READY    6h
+  my-json-server       my-json-server-nkksqxepai.now.sh            1    NPM       READY    9h
+  now-test             now-test-fefpsybyeq.now.sh                  -    STATIC    READY    2d
+```
+
+<br>
+#### 배포했던 앱 삭제
+```
+now rm 앱이름(or URL)
+```
+
+
+<br>
 #### 배포했던 앱 삭제
 ```
 now rm 앱이름(or URL)
 ```
 
 <br>
-#### 주의사항
-- 무료버젼(OSS)의 경우에 모든 소스코드를 공개하는 것이 원칙이며 비공개를 원한다면 유료버젼을 사용해야 한다
-
-<br>
 #### 소스보기 기능
-`https://도메인/_src` 로 접근하면 해당 프로젝트의 전체 소스코드를 확인할 수 있고 코드의 일부를 드래그 선택하면 선택된 코드 위치를 URL을 통해 다른 사람과 쉽게 공유할 수 있다
-
+`https://도메인/_src` 로 접근하면 해당 프로젝트의 전체 소스코드를 확인할 수 있고 코드의 일부를 드래그 선택하면 선택된 코드 위치를 URL을 통해 다른 사람과 쉽게 공유할 수 있다. 무료버젼(OSS)의 경우에는 이렇게 소스코드를 오픈하는 것이 원칙이며 비공개를 원한다면 유료버젼을 사용해야 한다
 
 <br>
-#### 사용후기
-- 노드프로젝트의 경우 시간간격을 두었다가 갑자기 접속하면 화면로딩시 속도가 좀 느린 것 같은 느낌이다. 아마도 해당 서비스가 항상 대기 상태로 있는 것은 아닌 것 같고 오랜 간격을 두고 요청이 들어올 때는 내부적으로 어떤 구동절차가 수행되는 것 같다.
+#### 기타
+- 노드프로젝트의 경우 시간간격을 두었다가 갑자기 접속하면 접속 속도가 상당히 느려진다. 아마도 해당 서비스가 항상 대기 상태로 있는 것은 아니고 장시간 요청이 없는 경우에는 서비스가 중지 상태로 있다가 요청 발생시 인스턴스가 올라오고 일정 시간 유지되는 것 같다.
+    - 운영 환경으로 사용 하기에는 적절한 선택이 될 수 없다.
 - 완전 무료는 아니고 상품 가격에 따라 제공되는 용량은 다르다
 - 서비스를 잠깐 이용해 보니 Now라는 이름이 해당 서비스에 잘 잘 어울린다는 생각이 든다.
 
