--- a/_posts/2019-01-11-man-day.md
+++ b/_posts/2019-01-11-man-day.md
@@ -83,16 +83,24 @@ function calcManDay(st, ed) {
     //  시작일자와 끝일자에서 소요된 시간을 분단위로 계산해서 ManDay를 계산한다
     function workingHour(workingDayCnt, HH1, mm1, HH2, mm2){
         var hh1 = Number(HH1);
-        hh1 = hh1 < 9 ? 9 : hh1;        // 9시 이전으로 등록된 시각은 9로 세팅
         var mm1 = Number(mm1);
+        if(hh1 < 9){
+            // 9시 이전으로 등록된 시각은 9로 세팅
+            hh1 = 9;
+            mm1 = 0;
+        }
     
         var hh2 = Number(HH2);
-        hh2 = hh2 > 18 ? 18 : hh2;      // 18시 이후로 처리된 건은 모두 18시로 세팅
         var mm2 = Number(mm2);
+        if(hh2 >= 18){
+            // 18시 이후로 처리된 건은 모두 18시로 세팅
+            hh2 = 18;
+            mm2 = 0;
+        }
     
         // 점심시간 차감
-        var h1 = hh1 > 13 ? (hh1 - 1) : hh1;
-        var h2 = hh2 > 13 ? (hh2 - 1) : hh2;
+        var h1 = hh1 >= 13 ? (hh1 - 1) : hh1;
+        var h2 = hh2 >= 13 ? (hh2 - 1) : hh2;
     
         // 하루 8시간 근무 기준으로
         if (workingDayCnt === 0) {
