--- a/_posts/2019-01-11-man-day.md
+++ b/_posts/2019-01-11-man-day.md
@@ -23,8 +23,7 @@ tags: [js]
 #### 코드
 ```javascript
 function calcManDay(st, ed) {
-
-	// date 기준 diff 일수 이후 날짜 계
+    // date 기준 diff 일수 이후 날짜 계산
     function addDays(date, diff){
         const oneday = 60 * 1000 * 60 * 24;
         return new Date(date.getTime() + oneday * diff);
