--- a/_posts/2019-09-08-link-meta.md
+++ b/_posts/2019-09-08-link-meta.md
@@ -39,7 +39,7 @@ https://news.v.daum.net/v/20190907135442277
 </template>
 <script lang="ts">
 import {createComponent, onMounted, reactive} from '@vue/composition-api'
-import {getUrlMeta} from '~/biz/_common/get-url-meta'
+import {getUrlMeta} from '~/_common/get-url-meta'
 
 export default createComponent({
   props: ['url'],
@@ -113,3 +113,5 @@ export default createComponent({
         width 300px
 </style>
 ```
+
+`getUrlMeta` 함수는 [이전 포스트](/2019/09/get-url-meta/) 를 참고한다.
