--- a/_posts/2019-09-08-link-meta.md
+++ b/_posts/2019-09-08-link-meta.md
@@ -94,7 +94,9 @@ export default createComponent({
         &:hover
           color black
     .vertival-bar
-      width 10px
+      flex-grow 0
+      flex-shrink 0
+      flex-basis 3px
       background-color var(--iconGray)
     .meta
       margin-left 10px
