--- a/_posts/2019-12-17-elm-study.md
+++ b/_posts/2019-12-17-elm-study.md
@@ -139,7 +139,7 @@ type User
   | Visitor String
 ```
 
-아래 같이 toName 함수를 구현할 수 있다
+User 타입을 사용하는 toName 함수를 구현할 수 있다
 ```elm
 toName : User -> String
 toName user =
