--- a/_posts/2020-02-18-http-auth.md
+++ b/_posts/2020-02-18-http-auth.md
@@ -2,7 +2,7 @@
 layout: post
 title: 'http 요청시 http 인증정보 싣기'
 date: 2020-02-18 00:10
-categories: npm
+categories: js
 tags: [fetch, authrization]
 ---
 
@@ -11,6 +11,8 @@ https://user01:password01@somesite.com
 ```
 
 과 같이 인증정보가 필요한 경우 fetch 를 이용한 요청
+
+<br>
 
 ```javascript
 const url = 'https://somesite.com'
