--- a/_posts/2020-02-18-http-auth.md
+++ b/_posts/2020-02-18-http-auth.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'http 요청시 http 인증정보 싣기'
+title: 'URL에 포함된 id/pw 를 fetch 함수로 보내기'
 date: 2020-02-18 00:10
 categories: js
 tags: [fetch, authrization]
