--- a/_posts/2020-02-18-http-auth.md
+++ b/_posts/2020-02-18-http-auth.md
@@ -10,7 +10,9 @@ tags: [fetch, authrization]
 https://user01:password01@somesite.com
 ```
 
-과 같이 인증정보가 필요한 경우 fetch 를 이용한 요청
+<br>
+
+과 같이 url에 포함된 id/pw 를 fetch 함수로 요청하는 방법
 
 <br>
 
