--- a/_posts/2020-02-28-js-sound.md
+++ b/_posts/2020-02-28-js-sound.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '웹에서 소리 재생하기'
+title: 'play sound with javascript'
 date: 2020-02-28 00:10
 categories: js
 tags: [js, sound]
