--- a/_posts/2020-02-28-js-sound.md
+++ b/_posts/2020-02-28-js-sound.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'play sound with javascript'
+title: 'play sound with JavaScript'
 date: 2020-02-28 00:10
 categories: js
 tags: [js, sound]
@@ -13,7 +13,7 @@ tags: [js, sound]
 ```javascript
 function play() {
   var audio = new Audio(
-    'https://interactive-examples.mdn.mozilla.net/media/examples/t-rex-roar.mp3'
+    'https://interactive-examples.mdn.mozilla.net/media/examples/t-rex-roar.mp3',
   )
   audio.play()
 }
