--- a/_posts/2020-04-24-rxjs.md
+++ b/_posts/2020-04-24-rxjs.md
@@ -98,6 +98,30 @@ console.log('just after subscribe')
 
 이 observable 에 observer 가 등록되면(observer 가 observable 을 구독하면) observer 는 연속으로 1,2,3 을 전달 받고 1초 후 4를 전달받고 끝이 난다.
 
+Note)
+
+1. `observable.subscribe` 는 observer 를 인자로 받는다.
+1. observable 구독시 `next`, `error`, `complete` 3가지 핸들러 2가지 형태로 전달할 수 있다.
+   1. ex1) `observable.subscribe({next, error, complete})`
+   1. ex2) `observable.subscribe(next, error, complete)`
+
+<br>
+
+### Subscription
+
+observable 를 구독하면(subscribe) subscription 객체가 리턴된다. subscription 객체를 이용해 해당 구독을 취소할 수 있다. subscription 은 구독을 취소하기 위한 용도로서만 사용된다.
+
+```js
+import {interval} from 'rxjs'
+
+const observable = interval(1000)
+const subscription = observable.subscribe(x => console.log(x))
+// Later:
+// This cancels the ongoing Observable execution which
+// was started by calling subscribe with an Observer.
+subscription.unsubscribe()
+```
+
 <br>
 
 ### Subject
