--- a/_posts/2020-04-24-rxjs.md
+++ b/_posts/2020-04-24-rxjs.md
@@ -6,11 +6,11 @@ categories: react
 tags: [react, RxJS]
 ---
 
-[RxJS](https://rxjs-dev.firebaseapp.com/) 는 이벤트 기반 프로그램에서 함수형 프로그래밍으로 이벤트를 처리할 수 있도록 제공하는 라이브러리다.
+[RxJS](https://rxjs-dev.firebaseapp.com/) 는 이벤트 기반 프로그래밍에서 함수형 프로그래밍으로 이벤트를 처리할 수 있도록 도와주는 라이브러리다.
 
 RxJS는 모든 이벤트를 observable 로 추상화하여 시간에 따른 스트림으로 간주할 수 있게 한다. 그리고 각 이벤트가 observer(이벤트핸들러)에게 전달되기 전에 map, filter 등의 operator 를 이용해 이벤트를 필요한 형태로 재가공하여 observer 에게 전달할 수 있다.
 
-RxJS 는 그 observable 이벤트가 observer 에게 전달되기 전에 여러가지 operator 들을 이용하여 이벤트를 보다 선언적으로(직관적으로) 처리할 수 있도록 해준다.
+RxJS 는 observable 에서 발생한 이벤트가 observer 에게 전달되기 전에 여러가지 operator 들을 이용하여 이벤트를 보다 선언적으로(직관적으로) 처리할 수 있도록 해준다.
 
 구체적인 예를 통해서 RxJS 의 개념과 동작방식을 알아보자
 
@@ -62,6 +62,18 @@ observable.subscribe(observer)
 
 <br>
 
+RxJS 를 이용하여 이벤트를 다룰 때는 항상 아래와 같은 절차를 거치게 된다.
+
+1. observable 정의
+   - 어떤 이벤트들을 하나의 observable 로 묶을 것인가
+   - 적절한 operator 를 이용하여 obserable 을 가공
+1. observer 정의
+   - observable 로 부터 이벤트를 전달받으면 어떻게 처리할 지를 정의
+1. observable 와 observer 를 연결
+   - observer 와 observable 을 연결한다(`observable.subscribe()`)
+
+<br>
+
 ### Observable
 
 Observable 은 시간 흐름에 따라 발생하는 이벤트들의 집합이다. 단순하게 이벤트 스트림으로서 생각해 볼 수 있다.
@@ -104,6 +116,8 @@ Note)
 1. observable 구독시 `next`, `error`, `complete` 3가지 핸들러 2가지 형태로 전달할 수 있다.
    1. ex1) `observable.subscribe({next, error, complete})`
    1. ex2) `observable.subscribe(next, error, complete)`
+1. observer 가 observable 을 구독할 때 1,2,3 을 전달받은 시점이 'just after subscribe' 출력 전에 이루어졌다는 것에 유의한다.
+   - observable 은 이벤트를 동기 또는 비동기로 발생시킬 수 있음을 꼭 기억한다.
 
 <br>
 
