--- a/_posts/2020-04-24-rxjs.md
+++ b/_posts/2020-04-24-rxjs.md
@@ -49,7 +49,7 @@ let count = 0
 document.addEventListener('click', () => console.log(`Clicked ${++count} times`))
 ```
 
-핸들러가 count 변수를 참조하면서 순수성을 잃었다. 하지만 RxJS 를 이용하면 아래와 같이 순수함수만을 이용하여 처리가 가능하다.
+핸들러가 count 변수를 참조하면서 순수성을 잃었다. 하지만 RxJS 를 이용하면 아래와 같이 **순수함수만을 이용하여 처리가 가능**하다.
 
 ```js
 import {fromEvent} from 'rxjs'
@@ -117,7 +117,7 @@ Note)
    1. ex1) `observable.subscribe({next, error, complete})`
    1. ex2) `observable.subscribe(next, error, complete)`
 1. observer 가 observable 을 구독할 때 1,2,3 을 전달받은 시점이 'just after subscribe' 출력 전에 이루어졌다는 것에 유의한다.
-   - observable 은 이벤트를 동기 또는 비동기로 발생시킬 수 있음을 꼭 기억한다.
+   - **observable 은 이벤트를 동기 또는 비동기로 발생시킬 수 있음**을 꼭 기억한다.
 
 <br>
 
@@ -140,7 +140,7 @@ subscription.unsubscribe()
 
 ### Subject
 
-Subject 는 멀티캐스트를 위한 특별한 유형의 Observable 이다. 일반적으로는 하나의 observable 에는 하나의 observer 만 등록할 수 있습니다. 하지만 Subject 를 이용하면 하나의 observable 을 구독하는 여러개의 observer 를 등록할 수 있다.
+Subject 는 멀티캐스트를 위한 특별한 유형의 Observable 이다. 일반적으로는 하나의 observable 에는 하나의 observer 만 등록할 수 있다. 하지만 Subject 를 이용하면 하나의 observable 을 구독하는 여러개의 observer 를 생성하고 등록할 수 있다.
 
 ```js
 import { Subject, from } from 'rxjs';
@@ -168,6 +168,8 @@ observable.subscribe(subject); // You can subscribe providing a Subject
 ```
 
 위 예제는 먼저 subject 를 생성하고 해당 subject 를 구독하는 2개의 observer 를 subject 를 등록한다. 그리고 subject 가 observer 로서 observable 을 구독하게 한다. 그러면 observable 의 이벤트가 그대로 subject 에 등록된 2개의 observer 에게 모두 전달된다.
+
+> Subject 는 observable 이지만 observer 로서 또 다른 observable 을 구독할 수 있다
 
 <br>
 
