--- a/_posts/2020-04-24-rxjs.md
+++ b/_posts/2020-04-24-rxjs.md
@@ -61,6 +61,7 @@ observable.subscribe(observer)
 ```
 
 <br>
+Note)
 
 RxJS 를 이용하여 이벤트를 다룰 때는 항상 아래와 같은 절차를 거치게 된다.
 
@@ -109,6 +110,8 @@ console.log('just after subscribe')
 위에서 정의된 observable 은 observer 에게 연속으로 1,2,3 을 푸시하고 1초 후 4를 푸시하고 마치는 간단한 observable 이다.
 
 이 observable 에 observer 가 등록되면(observer 가 observable 을 구독하면) observer 는 연속으로 1,2,3 을 전달 받고 1초 후 4를 전달받고 끝이 난다.
+
+<br>
 
 Note)
 
@@ -168,6 +171,8 @@ observable.subscribe(subject); // You can subscribe providing a Subject
 ```
 
 위 예제는 먼저 subject 를 생성하고 해당 subject 를 구독하는 2개의 observer 를 subject 를 등록한다. 그리고 subject 가 observer 로서 observable 을 구독하게 한다. 그러면 observable 의 이벤트가 그대로 subject 에 등록된 2개의 observer 에게 모두 전달된다.
+
+<br>
 
 > Subject 는 observable 이지만 observer 로서 또 다른 observable 을 구독할 수 있다
 
