--- a/_posts/2020-04-24-rxjs.md
+++ b/_posts/2020-04-24-rxjs.md
@@ -6,7 +6,7 @@ categories: react
 tags: [react, RxJS]
 ---
 
-[RxJS](https://rxjs-dev.firebaseapp.com/) 는 이벤트 기반 프로그래밍에서 함수형 프로그래밍으로 이벤트를 처리할 수 있도록 도와주는 라이브러리다.
+[RxJS](https://rxjs-dev.firebaseapp.com/) 는 이벤트 기반 프로그래밍에서 함수형 프로그래밍을 이용해 보다 선언적으로 이벤트를 처리할 수 있도록 도와준다.
 
 RxJS는 모든 이벤트를 observable 로 추상화하여 시간에 따른 스트림으로 간주할 수 있게 한다. 그리고 각 이벤트가 observer(이벤트핸들러)에게 전달되기 전에 map, filter 등의 operator 를 이용해 이벤트를 필요한 형태로 재가공하여 observer 에게 전달할 수 있다.
 
