--- a/_posts/2020-04-24-rxjs.md
+++ b/_posts/2020-04-24-rxjs.md
@@ -38,7 +38,7 @@ observable.subscribe(observer)
 2. observer(이벤트핸들러) 를 정의한다
 3. observer 가 observable 을 구독한다
 
-아직까지는 간단한 것을 굳이 왜 이렇게 복잡하게 해야하나 의문이 생긴다. 아직까지는 RxJS 의 능력?을 느낄 수가 없다.
+아직까지는 간단한 것을 굳이 왜 이렇게 복잡하게 해야하나 의문이 생긴다. 아직까지는 RxJS 의 능력?을 실감할 수 없다.
 
 <br>
 
