--- a/_posts/2020-05-15-notice.md
+++ b/_posts/2020-05-15-notice.md
@@ -1,15 +1,17 @@
 ---
 layout: post
-title: '블로그 이사갑니다'
+title: '[공지] 20년 5월 블로그 이사갑니다'
 date: 2020-05-15 00:10
 categories: memo
 tags: [notice]
 ---
 
-## 2020년 5월 공지
+#### Gatsby 기반의 [새로운 블로그](https://min9nim.now.sh/)로 이사를 갑니다.
 
-jekyll 블로그를 남겨두고 Gatsby 기반의 [새로운 블로그](https://min9nim.now.sh/)로 이사를 갑니다.
+<br>
 
-https://min9nim.now.sh/
+### 👉 https://min9nim.now.sh
 
-당분간은 이전 블로그(여기)를 그대로 아카이브 합니다. 😀
+<br>
+
+당분간 이 블로그는 이대로 현장보존 합니다. 😀
